Crash typing "w" in the search function #56666

Closed
opened 2018-09-03 15:04:01 +02:00 by Alessio Monti di Sopra · 5 comments

System informations
Windows 8.1 64 bit
CPU: Intel i7 4700MQ
GPU: Nvidia GeForce GT 740M

Blender Version
4bfc236d39

Short description of error
Blender crashes typing "w" in the search field when a non-mesh object is the active object.

Exact steps for others to reproduce the error
In default scene, select the camera or the lamp, press F3 to search for operators and type "w".

**System informations** Windows 8.1 64 bit CPU: Intel i7 4700MQ GPU: Nvidia GeForce GT 740M **Blender Version** 4bfc236d393 **Short description of error** Blender crashes typing "w" in the search field when a non-mesh object is the active object. **Exact steps for others to reproduce the error** In default scene, select the camera or the lamp, press F3 to search for operators and type "w".

Added subscriber: @a.monti

Added subscriber: @a.monti

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-09-03 16:01:44 +02:00

Indeed… tsst… gpencil… :P

Indeed… tsst… gpencil… :P

This issue was referenced by f922881620

This issue was referenced by f92288162016ca7b256a940d0b78f33659ee387e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56666
No description provided.