Fix T56666: Crash typing "w" in the search function.

One shall check object is a GPencil one, before trying to use ob->data...